# traa-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
traa_mcp_server/: __init__.py
traa_mcp_server/client/: app.py
traa_mcp_server/server/: __init__.py  app.py  sse.py  stdio.py
traa_mcp_server/tools/: snapshot.py  snapshot_test.py
